# Proyecto1-RPC-MOM

./: README.md
MOM/: CMakeLists.txt  main.cpp
MOM/proto/: inventory_service.grpc.pb.cc  inventory_service.grpc.pb.h  inventory_service.pb.cc  inventory_service.pb.h  inventory_service.proto  mom.grpc.pb.cc  mom.grpc.pb.h  mom.pb.cc  mom.pb.h  mom.proto  orders_service.pb.h  orders_service.proto  users.grpc.pb.cc  users.grpc.pb.h  users.pb.cc  users.pb.h  users.proto
MOM/routes/: inventory_routes.h  mom_routes.cpp  mom_routes.h  orders_routes.h  users_routes.h
api-gateway/: .bash_history  CMakeLists.txt  gateway.cpp
api-gateway/.config/gcloud/: .last_survey_prompt.yaml  access_tokens.db  credentials.db
api-gateway/.config/gcloud/configurations/: config_default
api-gateway/.config/gcloud/legacy_credentials/juanmi11102@gmail.com/: .boto  adc.json
api-gateway/api_gateway/: CMakeLists.txt  gateway  gateway.cpp
api-gateway/api_gateway/inventory/: inventory_client.cpp  inventory_client.h  inventory_service.grpc.pb.cc  inventory_service.grpc.pb.h  inventory_service.pb.cc  inventory_service.pb.h  inventory_service.proto
api-gateway/proto/: mom.grpc.pb.cc  mom.grpc.pb.h  mom.pb.cc  mom.pb.h  mom.proto
client/: client  client.cpp
inventory_service/: inventory.json  inventory_server  inventory_service.cc  inventory_service.grpc.pb.h  inventory_service.h  inventory_service.proto  main.cc  makefile
orders_service/: CMakeLists.txt  inventory_client.pb.cc  inventory_client.proto  main.cc  makefile  orders_server  orders_service  orders_service.cc  orders_service.grpc.pb.h  orders_service.h  orders_service.pb.cc  orders_service.proto
users_service/: go.mod  main.go  users.json
users_service/archivados/: client_backup.go
users_service/orders/: orders_client.pb.go  orders_client.proto  orders_client_grpc.pb.go
users_service/users/: users.pb.go  users.proto  users_grpc.pb.go
